--- a/workout.css
+++ b/workout.css
@@ -2,16 +2,5 @@ table, th, td {
 	text-align: center;
 	border: solid;
 	border-width: thin;
+	border-collapse: collapse;
 }
-
-/*
-thead {
-	border: solid;
-	border-width: thin;
-}
-
-tbody {
-	border: solid;
-	border-width: thin;
-}
-*/
