commented out custom css for table

--- a/workout.css
+++ b/workout.css
@@ -1,9 +1,11 @@
+/*
 table, th, td {
 	text-align: center;
 	border: solid;
 	border-width: thin;
 	border-collapse: collapse;
 }
+*/
 
 #Edit {
 	background-color: blue;
