--- a/workout.css
+++ b/workout.css
@@ -6,6 +6,13 @@ table, th, td {
 	border-collapse: collapse;
 }
 */
+form {
+	margin-left: 10px;
+}
+
+table {
+	margin-right: 10px;
+}
 
 #Edit {
 	background-color: blue;
