fixed custom css for buttons

--- a/workout.css
+++ b/workout.css
@@ -18,6 +18,7 @@ h1 {
 	margin-left: 10px;
 }
 
+/*
 #Edit {
 	background-color: blue;
 }
@@ -25,3 +26,4 @@ h1 {
 #Delete {
 	background-color: red;
 }
+*/
