--- a/workout.css
+++ b/workout.css
@@ -18,12 +18,6 @@ h1 {
 	margin-left: 10px;
 }
 
-/*
-#Edit {
-	background-color: blue;
-}
-
 #Delete {
-	background-color: red;
+	margin-left: 5px;
 }
-*/
