troubleshooting multiple classes on one tag

--- a/workout.css
+++ b/workout.css
@@ -18,7 +18,17 @@ h1 {
 	margin-left: 10px;
 }
 
-.card-style {
+#card-table {
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
+    min-height: 56px;
+    transition: min-height 0.3s;
+    transition-property: min-height;
+    transition-duration: 0.3s;
+    transition-timing-function: initial;
+    transition-delay: initial;
+}
+
+#card-form {
 	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
     min-height: 56px;
     transition: min-height 0.3s;
