--- a/workout.css
+++ b/workout.css
@@ -6,15 +6,22 @@ table, th, td {
 	border-collapse: collapse;
 }
 */
-/*
+
+
 form {
-	margin-left: 10px;
+	margin-top: 5px;
+	margin-right: 5px;
+	margin-bottom: 5px;
+	margin-left: 5px;
 }
 
 table {
-	margin-right: 10px;
+	margin-top: 5px;
+	margin-right: 5px;
+	margin-bottom: 5px;
+	margin-left: 5px;
 }
-*/
+
 h1 {
 	margin-left: 10px;
 }
