--- a/workout.css
+++ b/workout.css
@@ -22,14 +22,6 @@ table {
 	margin-left: 5px;
 }
 
-thead {
-	margin-right: 5px;
-}
-
-tbody {
-	margin-right: 5px;
-}
-
 h1 {
 	margin-left: 10px;
 }
@@ -44,6 +36,7 @@ h1 {
     transition-delay: initial;
     margin-left: 10px;
     margin-right: 10px;
+    padding-right: 5px;
 }
 
 #Delete {
