--- a/workout.css
+++ b/workout.css
@@ -36,6 +36,10 @@ h1 {
     transition-delay: initial;
     margin-left: 10px;
     margin-right: 10px;
+    padding-top: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
 }
 
 #table-container {
