--- a/workout.css
+++ b/workout.css
@@ -34,8 +34,6 @@ h1 {
     transition-duration: 0.3s;
     transition-timing-function: initial;
     transition-delay: initial;
-    margin-left: 10px;
-    margin-right: 10px;
     padding-top: 10px;
     padding-right: 10px;
     padding-bottom: 10px;
@@ -43,8 +41,16 @@ h1 {
 }
 
 #table-container {
-	padding-right: 10px;
+	padding-right: 15px;
+	margin-left: 5px;
+	margin-right: 10px;
 }
+
+#form-container {
+	margin-right: 5px;
+	margin-left: 10px;
+}
+
 #Delete {
 	margin-left: 5px;
 }
