--- a/workout.css
+++ b/workout.css
@@ -45,11 +45,13 @@ h1 {
 	padding-right: 15px;
 	margin-left: 5px;
 	margin-right: 10px;
+	margin-top: 20px;
 }
 
 #form-container {
 	margin-right: 5px;
 	margin-left: 10px;
+	margin-top: 20px;
 }
 
 #Delete {
@@ -58,5 +60,4 @@ h1 {
 
 .col-md-12 {
 	background-color: #FFEB3B
-	margin-bottom: 20px;
 }
