--- a/workout.css
+++ b/workout.css
@@ -58,7 +58,13 @@ h1 {
 	margin-left: 5px;
 }
 
+.row {
+	background-color: #FFEB3B;
+}
+
+/*
 .col-md-12 {
 	background-color: #FFEB3B
 	box-shadow: 0 5px 7px rgba(0, 0, 0, 0.26);
 }
+*/
