--- a/workout.css
+++ b/workout.css
@@ -7,7 +7,8 @@ table, th, td {
 }
 */
 .row {
-	background-color: #FAFAFA;
+	background-color: #EEEEEE;
+	height: 100%;
 }
 
 form {
@@ -41,7 +42,7 @@ h1 {
     padding-right: 10px;
     padding-bottom: 10px;
     padding-left: 10px;
-    background-color: initial;
+    background-color: white;
 }
 
 #table-container {
