change in gradient

--- a/workout.css
+++ b/workout.css
@@ -66,9 +66,9 @@ h1 {
 .col-md-12 {
 	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
 	background: #FFEB3B; /* For browsers that do not support gradients */
-  	background: -webkit-linear-gradient(left, #FFEB3B, white); /* For Safari 5.1 to 6.0 */
-  	background: -o-linear-gradient(right, #FFEB3B, white); /* For Opera 11.1 to 12.0 */
-  	background: -moz-linear-gradient(right, #FFEB3B, white); /* For Firefox 3.6 to 15 */
-  	background: linear-gradient(to right, #FFEB3B, white); /* Standard syntax */
+  	background: -webkit-linear-gradient(left, #FFEB3B, #FFF59D); /* For Safari 5.1 to 6.0 */
+  	background: -o-linear-gradient(right, #FFEB3B, #FFF59D); /* For Opera 11.1 to 12.0 */
+  	background: -moz-linear-gradient(right, #FFEB3B, #FFF59D); /* For Firefox 3.6 to 15 */
+  	background: linear-gradient(to right, #FFEB3B, #FFF59D); /* Standard syntax */
 }
 
