--- a/workout.css
+++ b/workout.css
@@ -23,7 +23,12 @@ table {
 	margin-right: 5px;
 	margin-bottom: 5px;
 	margin-left: 5px;
-	max-height: 500px;
+}
+
+tbody {
+	display: block;
+	max-height: 400px;
+	overflow: scroll;
 }
 
 h1 {
@@ -50,7 +55,6 @@ h1 {
 	margin-left: 5px;
 	margin-right: 10px;
 	margin-top: 20px;
-	max-height: 500px;
 }
 
 #form-container {
