--- a/workout.css
+++ b/workout.css
@@ -23,18 +23,15 @@ table {
 	margin-right: 5px;
 	margin-bottom: 5px;
 	margin-left: 5px;
-	display: block;
-	max-height: 400px;
-	overflow: scroll;
 }
 
-/*
 tbody {
 	display: block;
+	width: 100%;
 	max-height: 400px;
-	overflow: scroll;
+	overflow-y: scroll;
 }
-*/
+
 
 h1 {
 	margin-left: 10px;
