--- a/workout.css
+++ b/workout.css
@@ -40,13 +40,13 @@ h1 {
 
 #table-container {
 	padding-right: 15px;
-	margin-left: 5px;
+	/*margin-left: 5px;*/
 	margin-right: 10px;
 	margin-top: 20px;
 }
 
 #form-container {
-	margin-right: 5px;
+	/*margin-right: 5px;*/
 	margin-left: 10px;
 	margin-top: 20px;
 }
