--- a/workout.css
+++ b/workout.css
@@ -40,13 +40,11 @@ h1 {
 
 #table-container {
 	padding-right: 15px;
-	/*margin-left: 5px;*/
 	margin-right: 10px;
 	margin-top: 20px;
 }
 
 #form-container {
-	/*margin-right: 5px;*/
 	margin-left: 10px;
 	margin-top: 20px;
 }
@@ -78,6 +76,12 @@ h1 {
 	#Delete {
 		margin-left: 0px;
 		margin-top: 5px;
+	}
+	#form-container {
+		margin-left: 0px;
+	}
+	#table-container {
+		margin-right: 0px;
 	}
 }
 
