--- a/workout.css
+++ b/workout.css
@@ -77,6 +77,7 @@ h1 {
 		margin-left: 0px;
 		margin-top: 5px;
 	}
+	/*
 	#form-container {
 		margin-left: 10px;
 	}
@@ -84,5 +85,6 @@ h1 {
 		margin-right: 0px;
 		margin-left: 10px;
 	}
+	*/
 }
 
