--- a/workout.css
+++ b/workout.css
@@ -77,14 +77,17 @@ h1 {
 		margin-left: 0px;
 		margin-top: 5px;
 	}
-	/*
+	
 	#form-container {
-		margin-left: 10px;
+		/*margin-left: 10px;*/
+		margin-left: 0px;
+		margin-right: 0px;
 	}
-	*/
+
 	#table-container {
 		margin-right: 0px;
-		margin-left: 10px;
+		/*margin-left: 10px;*/
+		margin-left: 0px;
 	}
 }
 
