--- a/workout.css
+++ b/workout.css
@@ -69,6 +69,18 @@ h1 {
 	}
 }
 
+@media only screen and (min-width: 501px and max-width: 999px;){
+	#form-container {
+		margin-left: 0px;
+		margin-right: 0px;
+	}
+
+	#table-container {
+		margin-right: 0px;
+		margin-left: 0px;
+	}
+}
+
 @media only screen and (max-width: 500px){
 	#table-container{
 		overflow-x: auto;
@@ -79,14 +91,12 @@ h1 {
 	}
 	
 	#form-container {
-		/*margin-left: 10px;*/
 		margin-left: 0px;
 		margin-right: 0px;
 	}
 
 	#table-container {
 		margin-right: 0px;
-		/*margin-left: 10px;*/
 		margin-left: 0px;
 	}
 }
