--- a/workout.css
+++ b/workout.css
@@ -69,7 +69,7 @@ h1 {
 	}
 }
 
-@media only screen and (min-width: 501px and max-width: 999px;){
+@media only screen and (min-width: 501px and max-width: 999px){
 	#form-container {
 		margin-left: 0px;
 		margin-right: 0px;
