virtically center main login div

--- a/public/workout.css
+++ b/public/workout.css
@@ -30,6 +30,10 @@ h1 {
 	text-align: center;
 }
 
+#login-box {
+	margin-top: 20%;
+}
+
 .card-style {
 	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
     min-height: 56px;
