--- a/public/workout.css
+++ b/public/workout.css
@@ -26,6 +26,7 @@ h1 {
 	left: 10px;
 }
 
+/*
 h2 {
 	display: inline-block;
 }
@@ -33,6 +34,7 @@ h2 {
 h3 {
 	display: inline-block;
 }
+*/
 
 #user_login {
 	text-align: center;
