--- a/public/workout.css
+++ b/public/workout.css
@@ -1,8 +1,14 @@
+/*
 body {
 		background-color: #EEEEEE;
 }
 
 .row {
+	background-color: #EEEEEE;
+	height: 100vh;
+}
+*/
+body {
 	background-color: #EEEEEE;
 	height: 100vh;
 }
