--- a/public/workout.css
+++ b/public/workout.css
@@ -49,6 +49,7 @@ h3 {
 }
 
 .card-style {
+	top: 20px;
 	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
     min-height: 56px;
     transition: min-height 0.3s;
