--- a/public/workout.css
+++ b/public/workout.css
@@ -72,13 +72,11 @@ p {
 	float: right;
 }
 
+/*
 .clickable-row:hover {
 	background-color: #E0E0E0;
 }
-
-.clickable-row:visited {
-	background-color: white;
-}
+*/
 
 #user_login {
 	text-align: center;
