--- a/public/workout.css
+++ b/public/workout.css
@@ -82,12 +82,16 @@ p {
 	background-color: #E0E0E0;
 }
 
-.clickable-rowON {
+clickable-rowON:active {
 	background-color: #FFFF8D;
 }
 
 .clickable-rowOFF:hover {
 	background-color: #E0E0E0;
+}
+
+.clickable-rowOFF:active {
+	background-color: #FFFF8D;
 }
 
 .clickable-rowOFF {
