--- a/public/workout.css
+++ b/public/workout.css
@@ -90,6 +90,10 @@ p {
 	background-color: #E0E0E0;
 }
 
+.clickable-rowOFF:active {
+	color: #FFFF8D;
+}
+
 .clickable-rowOFF {
 	background-color: white;
 }
